--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "angular": "^1.3.6",
     "angular-mocks": "^1.3.6",
+    "css-loader": "^0.9.0",
     "exports-loader": "^0.6.2",
     "imports-loader": "^0.6.3",
     "jasmine-core": "^2.1.3",
@@ -23,6 +24,9 @@
     "karma-jasmine": "^0.3.2",
     "karma-sourcemap-loader": "^0.3.0",
     "karma-webpack": "^1.3.1",
+    "ng-cache-loader": "0.0.7",
+    "sass-loader": "^0.3.1",
+    "style-loader": "^0.8.2",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   }
