--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "css-loader": "^0.9.0",
     "exports-loader": "^0.6.2",
     "imports-loader": "^0.6.3",
+    "istanbul": "^0.3.5",
+    "istanbul-instrumenter-loader": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.2",
     "karma-sourcemap-loader": "^0.3.0",
     "karma-webpack": "^1.3.1",
