--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "name": "Nik Butenko",
     "email": "nik@butenko.me"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/packetloop/angular-webpack.git"
+  },
   "license": "MIT",
   "devDependencies": {
-    "angular": "^1.3.6",
     "angular-mocks": "^1.3.6",
     "css-loader": "^0.9.0",
     "exports-loader": "^0.6.2",
@@ -32,5 +35,9 @@
     "style-loader": "^0.8.2",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
+  },
+  "dependencies": {
+    "angular": "^1.3.6",
+    "angular-route": "^1.3.6"
   }
 }
