Keep dest and coverage

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-dest
+#dest
 
 #
 # nodejs
@@ -18,7 +18,7 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
+#coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
