Gulp + JSHint, Embed images

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Angular + Webpack build with Karma tests support",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "test": "node ./node_modules/karma/bin/karma start ./karma.conf.js --single-run"
+    "build": "rm -rf dest && webpack",
+    "test": "node ./node_modules/karma/bin/karma start ./karma.conf.js --single-run",
+    "validate": "gulp validate"
   },
   "author": {
     "name": "Nik Butenko",
@@ -20,19 +21,28 @@
     "angular-mocks": "^1.3.6",
     "css-loader": "^0.9.0",
     "exports-loader": "^0.6.2",
+    "file-loader": "^0.8.1",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
+    "gulp-jshint": "^1.9.0",
+    "gulp-log-capture": "0.0.6",
+    "gulp-replace": "^0.5.0",
     "imports-loader": "^0.6.3",
     "istanbul": "^0.3.5",
     "istanbul-instrumenter-loader": "^0.1.2",
     "jasmine-core": "^2.1.3",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.2",
     "karma-sourcemap-loader": "^0.3.0",
     "karma-webpack": "^1.3.1",
+    "merge-stream": "^0.1.6",
     "ng-cache-loader": "0.0.7",
     "sass-loader": "^0.3.1",
     "style-loader": "^0.8.2",
+    "url-loader": "^0.5.5",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   },
