--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-jshint": "^1.9.0",
     "gulp-log-capture": "0.0.6",
     "gulp-replace": "^0.5.0",
+    "hamlc-loader": "0.0.9",
     "imports-loader": "^0.6.3",
     "istanbul": "^0.3.5",
     "istanbul-instrumenter-loader": "^0.1.2",
