--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dest && webpack",
-    "test": "node ./node_modules/karma/bin/karma start ./karma.conf.js --single-run",
+    "test": "karma start ./karma.conf.js --single-run",
     "validate": "gulp validate"
   },
   "author": {
@@ -18,37 +18,37 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "angular-mocks": "^1.3.6",
-    "css-loader": "^0.9.0",
+    "angular-mocks": "^1.4.3",
+    "css-loader": "^0.15.6",
     "exports-loader": "^0.6.2",
-    "file-loader": "^0.8.1",
-    "gulp": "^3.8.10",
-    "gulp-concat": "^2.4.2",
-    "gulp-jshint": "^1.9.0",
+    "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-log-capture": "0.0.6",
-    "gulp-replace": "^0.5.0",
-    "hamlc-loader": "0.0.9",
-    "imports-loader": "^0.6.3",
-    "istanbul": "^0.3.5",
-    "istanbul-instrumenter-loader": "^0.1.2",
-    "jasmine-core": "^2.1.3",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.28",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.2.7",
-    "karma-jasmine": "^0.3.2",
-    "karma-sourcemap-loader": "^0.3.0",
-    "karma-webpack": "^1.3.1",
-    "merge-stream": "^0.1.6",
-    "ng-cache-loader": "0.0.7",
-    "sass-loader": "^0.3.1",
-    "style-loader": "^0.8.2",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "gulp-replace": "^0.5.3",
+    "hamlc-loader": "0.0.11",
+    "imports-loader": "^0.6.4",
+    "istanbul": "^0.3.17",
+    "istanbul-instrumenter-loader": "^0.1.3",
+    "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.3",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.4.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
+    "merge-stream": "^0.1.8",
+    "ng-cache-loader": "0.0.9",
+    "sass-loader": "^1.0.3",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "angular": "^1.3.6",
-    "angular-route": "^1.3.6"
+    "angular": "^1.4.3",
+    "angular-route": "^1.4.3"
   }
 }
