--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rm -rf dest && webpack",
     "test": "karma start ./karma.conf.js --single-run",
-    "validate": "gulp validate"
+    "validate": "eslint ."
   },
   "author": {
     "name": "Nik Butenko",
@@ -20,19 +20,14 @@
   "devDependencies": {
     "angular-mocks": "^1.4.3",
     "css-loader": "^0.15.6",
+    "eslint": "^1.0.0",
     "exports-loader": "^0.6.2",
     "file-loader": "^0.8.4",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-log-capture": "0.0.6",
-    "gulp-replace": "^0.5.3",
     "hamlc-loader": "0.0.11",
     "imports-loader": "^0.6.4",
     "istanbul": "^0.3.17",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^2.0.1",
     "karma": "^0.13.3",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.4.2",
