Transform all code to ES6

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -6,6 +6,10 @@
     "jasmine": true
   },
 
+  "globals": {
+    "angular": true
+  },
+
   "ecmaFeatures": {
     "arrowFunctions": true,
     "binaryLiterals": true,
