--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Angular + Webpack build with Karma tests support",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "build": "rm -rf dest && webpack",
     "test": "karma start ./karma.conf.js --single-run",
     "validate": "eslint ."
@@ -19,14 +20,14 @@
   "license": "MIT",
   "devDependencies": {
     "angular-mocks": "^1.4.3",
+    "babel-loader": "^5.3.2",
     "css-loader": "^0.15.6",
     "eslint": "^1.0.0",
     "exports-loader": "^0.6.2",
     "file-loader": "^0.8.4",
     "hamlc-loader": "0.0.11",
     "imports-loader": "^0.6.4",
-    "istanbul": "^0.3.17",
-    "istanbul-instrumenter-loader": "^0.1.3",
+    "isparta-loader": "^0.2.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.3",
     "karma-chrome-launcher": "^0.2.0",
@@ -36,6 +37,7 @@
     "karma-webpack": "^1.7.0",
     "merge-stream": "^0.1.8",
     "ng-cache-loader": "0.0.9",
+    "null-loader": "^0.1.1",
     "sass-loader": "^1.0.3",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
