Add ExtractText and Html wepback plugins

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "css-loader": "^0.15.6",
     "eslint": "^1.0.0",
     "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "hamlc-loader": "0.0.11",
+    "html-webpack-plugin": "^1.6.0",
     "imports-loader": "^0.6.4",
     "isparta-loader": "^0.2.0",
     "jasmine-core": "^2.3.4",
