--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.15.6",
     "eslint": "^1.0.0",
+    "eslint-loader": "^0.14.2",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
