--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "isparta-loader": "^0.2.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.3",
-    "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.4.2",
     "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
     "merge-stream": "^0.1.8",
     "ng-cache-loader": "0.0.9",
     "null-loader": "^0.1.1",
+    "phantomjs": "^1.9.17",
     "sass-loader": "^1.0.3",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
